@@ -19,6 +19,7 @@ Unreleased Version 2.2.2-pre
  * Fix: Don't reselect and scroll back to default layer after interacting with the layer list by picking a layer or toggling visibility. Thanks MachKerman and Ben for reporting.
  * Fix: Load PNGs even when they have corrupt checksums. Thanks xxxx for reporting.
  * Feature: Allow copying multiple entries from the event log. Thanks Bluestrings for reporting.
+ * Feature: Allow toggling vertical sync in the user interface preferences. Default is off, because it can cause input lag.
 
 2024-02-25 Version 2.2.2-beta.1
  * Server Feature: Allow adding a message when kicking someone through the admin API.
